OpafProjectVfMods/force-app/main/default/objects/Contact/fields/Application_Status_Eligibility_Decision__c.field-meta.xml
<CustomField>
    <fullName>Application_Status_Eligibility_Decision__c</fullName>
    <label>Receive Updates on Application Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>