OpafProjectVfMods/force-app/main/default/objects/Contact/fields/Birthdate_Formatted__c.field-meta.xml
<CustomField>
    <fullName>Birthdate_Formatted__c</fullName>
    <formula>text(MONTH( Birthdate )) +&apos;/&apos;+ text(DAY( Birthdate )) +&apos;/&apos;+  text(YEAR( Birthdate ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Birthdate Formatted</label>
    <type>Text</type>
</CustomField>