OpafProjectVfMods/force-app/main/default/objects/Contact/fields/DEA__c.field-meta.xml
<CustomField>
    <fullName>DEA__c</fullName>
    <label>DEA #</label>
    <length>10</length>
    <type>Text</type>
</CustomField>