OpafProjectVfMods/force-app/main/default/objects/Contact/fields/Facility_Worker__c.field-meta.xml
<CustomField>
    <fullName>Facility_Worker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facility Worker</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Facility Worker</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Provider</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>