OpafProjectVfMods/force-app/main/default/objects/Contact/fields/HealthCloudGA__DeceasedDate__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__DeceasedDate__c</fullName>
    <description>Date of death, if applicable</description>
    <label>Deceased Date</label>
    <type>Date</type>
</CustomField>