OpafProjectVfMods/force-app/main/default/objects/Contact/fields/Legal_Rep__c.field-meta.xml
<CustomField>
    <fullName>Legal_Rep__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Legal Rep</label>
    <type>Checkbox</type>
</CustomField>