OpafProjectVfMods/force-app/main/default/objects/Contact/fields/Legal_Rep_Condition_Check__c.field-meta.xml
<CustomField>
    <fullName>Legal_Rep_Condition_Check__c</fullName>
    <label>Legal Rep Condition Check</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>true</fullName>
            </value>
            <value>
                <fullName>false</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>