OpafProjectVfMods/force-app/main/default/objects/Contact/fields/Legal_Rep_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_Rep_First_Name__c</fullName>
    <label>Legal Rep First Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>