OpafProjectVfMods/force-app/main/default/objects/Contact/fields/Legal_Rep_Phone__c.field-meta.xml
<CustomField>
    <fullName>Legal_Rep_Phone__c</fullName>
    <label>Legal Rep Phone</label>
    <type>Phone</type>
</CustomField>