OpafProjectVfMods/force-app/main/default/objects/Contact/fields/Patient_Id__c.field-meta.xml
<CustomField>
    <fullName>Patient_Id__c</fullName>
    <externalId>true</externalId>
    <label>Patient Id</label>
    <length>16</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>