OpafProjectVfMods/force-app/main/default/objects/Contact/fields/Phone_Extension__c.field-meta.xml
<CustomField>
    <fullName>Phone_Extension__c</fullName>
    <label>Phone Extension</label>
    <length>30</length>
    <type>Text</type>
</CustomField>