OpafProjectVfMods/force-app/main/default/objects/Contact/fields/Provider_Id__c.field-meta.xml
<CustomField>
    <fullName>Provider_Id__c</fullName>
    <externalId>true</externalId>
    <label>Provider Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>