OpafProjectVfMods/force-app/main/default/objects/Contact/fields/Receive_All_Communication__c.field-meta.xml
<CustomField>
    <fullName>Receive_All_Communication__c</fullName>
    <label>Receive All Communication</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>