OpafProjectVfMods/force-app/main/default/objects/Contact/fields/Receive_Enrollment_Ending_Notifications__c.field-meta.xml
<CustomField>
    <fullName>Receive_Enrollment_Ending_Notifications__c</fullName>
    <label>Receive Enrollment Ending Notifications</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>