OpafProjectVfMods/force-app/main/default/objects/Contact/fields/Record_Status__c.field-meta.xml
<CustomField>
    <fullName>Record_Status__c</fullName>
    <label>Record Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>