OpafProjectVfMods/force-app/main/default/objects/Contact/fields/State_of_License__c.field-meta.xml
<CustomField>
    <fullName>State_of_License__c</fullName>
    <label>State of Licensure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>State</valueSetName>
    </valueSet>
</CustomField>