OpafProjectVfMods/force-app/main/default/objects/Contact/fields/Tax_Id__c.field-meta.xml
<CustomField>
    <fullName>Tax_Id__c</fullName>
    <label>Tax Id</label>
    <length>16</length>
    <type>Text</type>
</CustomField>