OpafProjectVfMods/force-app/main/default/objects/Contact/recordTypes/Caregiver.recordType-meta.xml
<RecordType>
    <fullName>Caregiver</fullName>
    <active>true</active>
    <description>A person with a Power of attorney document.</description>
    <label>Caregiver</label>
</RecordType>