OpafProjectVfMods/force-app/main/default/objects/Contact/recordTypes/Facility_Worker.recordType-meta.xml
<RecordType>
    <fullName>Facility_Worker</fullName>
    <active>true</active>
    <description>Office Worker, such as an office manager, case worker, receptionist or other staff.</description>
    <label>Facility Worker</label>
</RecordType>