OpafProjectVfMods/force-app/main/default/objects/Contact/listViews/Individual.listView-meta.xml
<ListView>
    <fullName>Individual</fullName>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.BIRTHDATE</columns>
    <columns>Street_Address__c</columns>
    <columns>Address_Line_2__c</columns>
    <columns>City__c</columns>
    <columns>State__c</columns>
    <columns>Zip_Code__c</columns>
    <columns>CONTACT.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.HealthCloudGA__IndustriesIndividual</value>
    </filters>
    <label>Individual</label>
</ListView>